[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/ui/menu/buttons/button_pause.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/ui/menu/buttons/button_resume.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui/hud/HUD.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/ui/menu/buttons/button_quit.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ui/menu/buttons/button_retry.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ui/menu/buttons/button_game_over.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/ui/menu/buttons/button_score.png" type="Texture" id=7]
[ext_resource path="res://scenes/ui/components/ScoreLabel.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sprites/ui/hud/heart_empty.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/ui/hud/heart_full.png" type="Texture" id=10]

[node name="HUD" type="CanvasLayer" groups=[
"HUD",
]]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 7.0
margin_top = 9.0
margin_right = 272.0
margin_bottom = 47.0
texture = ExtResource( 7 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" parent="TextureRect" instance=ExtResource( 8 )]
margin_top = 4.19499
margin_bottom = 37.195

[node name="HealthDisplay" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartEmpty" type="TextureRect" parent="HealthDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_right = -3.99999
margin_bottom = -8.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartFull" type="TextureRect" parent="HealthDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_right = -68.0
margin_bottom = -8.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausePopup" type="Popup" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PausePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="PausePopup/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 790.0
margin_bottom = 440.0
custom_constants/separation = 50
alignment = 1

[node name="Title" type="TextureRect" parent="PausePopup/MarginContainer/Content"]
margin_top = 152.0
margin_right = 780.0
margin_bottom = 190.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Buttons" type="HBoxContainer" parent="PausePopup/MarginContainer/Content"]
margin_top = 240.0
margin_right = 780.0
margin_bottom = 278.0
alignment = 1

[node name="CloseButton" type="TextureButton" parent="PausePopup/MarginContainer/Content/Buttons"]
margin_left = 123.0
margin_right = 388.0
margin_bottom = 38.0
focus_mode = 1
enabled_focus_mode = 1
texture_normal = ExtResource( 2 )

[node name="QuitButton" type="TextureButton" parent="PausePopup/MarginContainer/Content/Buttons"]
margin_left = 392.0
margin_right = 657.0
margin_bottom = 38.0
focus_mode = 1
enabled_focus_mode = 1
texture_normal = ExtResource( 4 )

[node name="GameoverPopup" type="Popup" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="GameoverPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="GameoverPopup/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 790.0
margin_bottom = 440.0
custom_constants/separation = 50
alignment = 1

[node name="Title" type="TextureRect" parent="GameoverPopup/MarginContainer/Content"]
margin_top = 108.0
margin_right = 780.0
margin_bottom = 146.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="GameoverPopup/MarginContainer/Content"]
margin_top = 196.0
margin_right = 780.0
margin_bottom = 234.0
texture = ExtResource( 7 )
stretch_mode = 4

[node name="Score" parent="GameoverPopup/MarginContainer/Content/TextureRect" instance=ExtResource( 8 )]
margin_left = 427.431
margin_top = 2.31425
margin_right = 467.431
margin_bottom = 35.3143

[node name="Buttons" type="HBoxContainer" parent="GameoverPopup/MarginContainer/Content"]
margin_top = 284.0
margin_right = 780.0
margin_bottom = 322.0
alignment = 1

[node name="RetryButton" type="TextureButton" parent="GameoverPopup/MarginContainer/Content/Buttons"]
margin_left = 123.0
margin_right = 388.0
margin_bottom = 38.0
focus_mode = 1
enabled_focus_mode = 1
texture_normal = ExtResource( 5 )

[node name="QuitButton" type="TextureButton" parent="GameoverPopup/MarginContainer/Content/Buttons"]
margin_left = 392.0
margin_right = 657.0
margin_bottom = 38.0
focus_mode = 1
enabled_focus_mode = 1
texture_normal = ExtResource( 4 )
[connection signal="pressed" from="PausePopup/MarginContainer/Content/Buttons/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="PausePopup/MarginContainer/Content/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="GameoverPopup/MarginContainer/Content/Buttons/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="GameoverPopup/MarginContainer/Content/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
